# mnemos-bridge-gemini

./: CHANGELOG.md  README.md  pyproject.toml
src/mnemos_bridge_gemini/: adapter.py
tests/: test_handle_function_call_offline.py  test_translator_offline.py
tests/integration/: test_gemini_tool_loop.py
