[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemos-bridge-gemini"
version = "0.2.0"
description = "Google Gemini adapter for mnemos-bridge-core MCP tool bridges."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "MNEMOS Bridge Maintainers" }
]
dependencies = [
  "mnemos-bridge-core>=0.1.0",
  "google-genai>=1.0",
  "httpx>=0.27",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos_bridge_gemini"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
