[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemos-bridge-gemini"
version = "0.2.0"
description = "Google Gemini adapter for mnemos-bridge-core MCP tool bridges."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "MNEMOS Bridge Maintainers" }
]
dependencies = [
  "mnemos-bridge-core>=0.1.0",
  "google-genai>=1.0",
  "httpx>=0.27",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos_bridge_gemini"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    # google-genai 1.x's aiohttp client subclasses ClientSession, which
    # aiohttp itself deprecates. Not actionable from our code; the SDK
    # owns it. Suppress so test output stays focused on actual signals.
    "ignore:Inheritance class AiohttpClientSession from ClientSession is discouraged:DeprecationWarning",
    # urllib3/chardet/charset_normalizer version mismatch — fires on any
    # conda+pyproject mix; not specific to this bridge. The warning class
    # is requests.RequestsDependencyWarning; both message-pattern and
    # class-path filters listed for redundancy across requests versions.
    "ignore:urllib3.*chardet.*charset_normalizer.*supported version",
    "ignore::requests.RequestsDependencyWarning",
    "ignore::requests.exceptions.RequestsDependencyWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
